<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Coingive</string>
    <string name="action_account_settings">Account Settings</string>
    <string name="action_transaction_history">Transaction History</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_donate">Donate</string>
    <string name="donate_you_are_donating_to">You are donating to:</string>
    <string name="donate_amount">Amount (BTC):</string>
    <string name="title_activity_thank_you">Thank You!</string>
    <string name="thank_you_donationcomplete">Donation Complete</string>
    <string name="thank_you_title">Thank You!</string>
    <string name="thank_you_text">Your Bitcoins have gone to make the world a better place :D.</string>
    <string name="thank_you_seetransactionhistory">See Your Donations</string>
    <string name="thank_you_seetransactionhistory_land">See Your Donations</string>
    <string name="thank_you_banner_contentdescription">Thankful throngs are grateful for your contribution!</string>
    <string name="thank_you_seeothercharities">See Other Charities</string>
    <string name="thank_you_share">Spread the Word</string>
    
    <string name="title_activity_transaction_history">Transaction History</string>
    <string name="title_activity_account_settings">Account Settings</string>
    <string name="account_settings_authenticate">Link your Coinbase</string>
    <string name="retrieving_cotd">Retrieving Charity of the Day information&#8230;</string>
    <string name="retrieving_charity">Retrieving charity information&#8230;</string>
    <string name="something_went_wrong">Something went wrong :(</string>
    <string name="error_no_network">To learn about today\'s charity, connect to the Internet.</string>
    <string name="error_cannot_connect">Couldn\'t get charity information.</string>
    <string name="try_again">Try again</string>
    <string name="title_activity_browser">Coinbase</string>
    <string name="redirect_url">http://localhost</string>
    <string name="title_activity_search">Search for Charities</string>
    <string name="search_box_hint">What kind of charity?</string>
    <string name="search_error_no_network">To search for charities, connect to the Internet.</string>
    <string name="search_error_server_error">:( Could not process your search request.</string>
    <string name="search_error_no_results">Couldn\'t find any matching charities.</string>
    <string name="title_activity_charity_display">Search Result</string>
    <string name="account_settings_unauthenticated_title">Before you donate&#8230;</string>
    <string name="account_settings_unauthenticated_text1">To donate using Coingive, link your Coinbase account.</string>
    <string name="account_settings_unauthenticated_text4">http://www.coinbase.com</string>
    <string name="account_settings_authenticated_title">Linked</string>
    <string name="account_settings_authenticated_text1">You\'re clear to donate using your Coinbase account.</string>
    <string name="account_settings_authenticated_text2">You\'re clear to donate USD %.2f daily using your coinbase account.</string>
    <string name="account_settings_authenticated_checkmark">Checkmark</string>
    <string name="account_settings_unauthenticated_no_network">No network connection available.</string>
    <string name="donate_donation_button_working">Donating&#8230;</string>
    <string name="donate_donation_button_donate">Donate Now</string>
    <string name="donate_donation_button_done">Donation Complete</string>
    <string name="donate_donation_failed">Your donation didn\'t go through. Try using the charity\'s homepage.</string>
    <string name="main_charitylogo_contentdescription">Charity logo</string>
    <string name="main_charityoftheday">Coingive Charity of the Day:</string>
    <string name="donate_bitcoin_address">Address:</string>
    <string name="balance" formatted="false">%.4f BTC ≈ %.2f USD</string>
    <string name="main_button_viewwebsite">Visit Website</string>
    <string name="donate_error_accountbalance">"Couldn't get your account balance. Did you link your Coinbase?"</string>
    <string name="donate_balance">Your Balance:</string>
    <string name="donate_error_nonetwork">To donate, connect to the Internet.</string>
    <string name="account_settings_unauthenticated_whatiscoinbase">What is Coinbase?</string>
    <string name="account_settings_authenticated_refreshing">Asking Coinbase if we\'re still together&#8230;</string>
    
</resources>
