<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccountSettingsActivity" >

    <ImageView
        android:id="@+id/MainLandscape_ImageView_TopBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_action_accept" 
        android:contentDescription="@string/account_settings_authenticated_checkmark" />

    <TextView
        android:id="@+id/lblAuthenticatedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/MainLandscape_ImageView_TopBanner"
        android:layout_toRightOf="@+id/MainLandscape_ImageView_TopBanner"
        android:paddingLeft="5dp"
        android:text="@string/account_settings_authenticated_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lblAuthenticatedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/MainLandscape_ImageView_TopBanner"
        android:layout_below="@+id/MainLandscape_ImageView_TopBanner"
        android:text="@string/account_settings_authenticated_text1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/settings_button_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblAuthenticatedText"
        android:layout_alignRight="@+id/lblAuthenticatedText"
        android:layout_below="@+id/lblAuthenticatedText"
        android:layout_marginTop="17dp"
        android:background="@drawable/gray_button"
        android:onClick="goToCoinbaseAccountSettings"
        android:text="Change Coingive Settings" />

    <ProgressBar
        android:id="@+id/AccountSettings_ProgressBar_Refreshing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/settings_button_edit"
        android:layout_below="@+id/settings_button_edit"
        android:layout_marginTop="21dp" />

    <TextView
        android:id="@+id/AccountSettings_TextView_AskingCoinbase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/AccountSettings_ProgressBar_Refreshing"
        android:layout_toRightOf="@+id/AccountSettings_ProgressBar_Refreshing"
        android:text="@string/account_settings_authenticated_refreshing"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="italic" />

</RelativeLayout>
